--- a/index.html
+++ b/index.html
@@ -65,3 +65,45 @@
             padding: 10px;
             font-size: 14px;
         }
+    </style>
+</head>
+<body>
+    <header>
+        <p>Korepetycje online z chemii i matematyki</p>
+    </header>
+
+    <section class="about">
+        <div class="container overlay">
+            <img src="received_1829666051168506.jpeg" alt="Julia Nielipińska">
+            <div class="text">
+                <h2>O mnie</h2>
+                <p>Jestem studentką IV roku farmacji na WUM. Na moich studiach ukończyłam kursy z chemii nieorganicznej, organicznej, fizycznej i analitycznej, a także matematyki i statystyki, co pozwoliło mi poszerzyć moją wiedzę i wzbogacić ją o doświadczenie praktyczne, dzięki któremu zagadnienia wytłumaczę Ci w przystępny sposób. Mój sposób nauki na studiach opieram na mnemotechnikach i skojarzeniach, które również stosuję w pracy z moimi uczniami. </p>
+                <p>Oferuję zajęcia z chemii (podstawowej i rozszerzonej) oraz matematyki podstawowej, w tym przygotowanie pod maturę.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="offer overlay">
+        <h2>Oferuję zajęcia w zakresie:</h2>
+        <p>✔ Chemii podstawowowej i rozszerzonej</p>
+        <p>✔ Matematyki podstawowej</p>
+        <p>✔ Przygotowanie do matury i sprawdzianów</p>
+        <p>✔ Zajęć online dostosowanych do Twoich potrzeb</p>
+    </section>
+
+    <section class="pricing overlay">
+        <h2>Cennik</h2>
+        <p>💰 Cena: 90 zł/h</p>
+    </section>
+
+    <section class="contact overlay">
+        <h2>Kontakt</h2>
+        <p>📞 Telefon: <a href="tel:517214295">517 214 295</a></p>
+        <p>📧 Email: <a href="mailto:julia.nielipinska@gmail.com">julia.nielipinska@gmail.com</a></p>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 Julia Nielipińska – Wszystkie prawa zastrzeżone</p>
+    </footer>
+</body>
+</html>
