--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
     <section class="about">
         <div class="container overlay">
-            <img src="received_1829666051168506.jpeg" alt="Julia Nielipińska">
+            <img src="profile.jpeg" alt="Julia Nielipińska">
             <div class="text">
                 <h2>O mnie</h2>
                 <p>Jestem studentką IV roku farmacji na WUM. Na moich studiach ukończyłam kursy z chemii nieorganicznej, organicznej, fizycznej i analitycznej, a także matematyki i statystyki, co pozwoliło mi poszerzyć moją wiedzę i wzbogacić ją o doświadczenie praktyczne, dzięki któremu zagadnienia wytłumaczę Ci w przystępny sposób. Mój sposób nauki na studiach opieram na mnemotechnikach i skojarzeniach, które również stosuję w pracy z moimi uczniami. </p>
